@@ -303,7 +303,7 @@ static void get_drivers(MENTRY *entry)
 /* extract drivers options for the option menu */
 static void get_driver_options(MENTRY *entry, MENTRY *dr_entry)
 {
-	int drvno = (long) dr_entry->data;
+	int drvno = (SINTPTR_T) dr_entry->data;
 	char *cmdline;
 
 	if (entry->text)
@@ -372,12 +372,12 @@ static void get_themes(MENTRY *entry)
 
 static int config_get_act_theme(void)
 {
-	return (long)other_entries[OPT_THEME].data;
+	return (SINTPTR_T)other_entries[OPT_THEME].data;
 }
 
 static void config_set_act_theme(int act_theme)
 {
-	other_entries[OPT_THEME].data = (void *)(long)act_theme;
+	other_entries[OPT_THEME].data = (void *)(SINTPTR_T)act_theme;
 }
 
 static void theme_get_attrs (THEME_DATA *data)
@@ -629,47 +629,47 @@ static void config_set_config(CONFIG *config)
 {
 	int i;
 
-	output_entries[OPT_DRIVER].data = (void *)(long)config->driver;
+	output_entries[OPT_DRIVER].data = (void *)(SINTPTR_T)config->driver;
 #if LIBMIKMOD_VERSION >= 0x030107
 	strcpy (output_entries[OPT_DRV_OPTION].data,config->driveroptions);
 #endif
-	output_entries[OPT_STEREO].data = (void *)(long)config->stereo;
-	output_entries[OPT_MODE_16BIT].data = (void *)(long)config->mode_16bit;
-	output_entries[OPT_FREQUENCY].data = (void *)(long)config->frequency;
-	output_entries[OPT_INTERPOLATE].data = (void *)(long)config->interpolate;
-	output_entries[OPT_HQMIXER].data = (void *)(long)config->hqmixer;
-	output_entries[OPT_SURROUND].data = (void *)(long)config->surround;
-	output_entries[OPT_REVERB].data = (void *)(long)config->reverb;
+	output_entries[OPT_STEREO].data = (void *)(SINTPTR_T)config->stereo;
+	output_entries[OPT_MODE_16BIT].data = (void *)(SINTPTR_T)config->mode_16bit;
+	output_entries[OPT_FREQUENCY].data = (void *)(SINTPTR_T)config->frequency;
+	output_entries[OPT_INTERPOLATE].data = (void *)(SINTPTR_T)config->interpolate;
+	output_entries[OPT_HQMIXER].data = (void *)(SINTPTR_T)config->hqmixer;
+	output_entries[OPT_SURROUND].data = (void *)(SINTPTR_T)config->surround;
+	output_entries[OPT_REVERB].data = (void *)(SINTPTR_T)config->reverb;
 
-	playback_entries[OPT_VOLUME].data = (void *)(long)config->volume;
+	playback_entries[OPT_VOLUME].data = (void *)(SINTPTR_T)config->volume;
 	playback_entries[OPT_VOLRESTRICT].data =
-	  (void *)(long)config->volrestrict;
-	playback_entries[OPT_FADE].data = (void *)(long)config->fade;
-	playback_entries[OPT_LOOP].data = (void *)(long)config->loop;
-	playback_entries[OPT_PANNING].data = (void *)(long)config->panning;
-	playback_entries[OPT_EXTSPD].data = (void *)(long)config->extspd;
+	  (void *)(SINTPTR_T)config->volrestrict;
+	playback_entries[OPT_FADE].data = (void *)(SINTPTR_T)config->fade;
+	playback_entries[OPT_LOOP].data = (void *)(SINTPTR_T)config->loop;
+	playback_entries[OPT_PANNING].data = (void *)(SINTPTR_T)config->panning;
+	playback_entries[OPT_EXTSPD].data = (void *)(SINTPTR_T)config->extspd;
 
 	plmode_entries[OPT_PM_MODULE].data =
-	  (void *)(long)BTST(config->playmode, PM_MODULE);
+	  (void *)(SINTPTR_T)BTST(config->playmode, PM_MODULE);
 	plmode_entries[OPT_PM_MULTI].data =
-	  (void *)(long)BTST(config->playmode, PM_MULTI);
+	  (void *)(SINTPTR_T)BTST(config->playmode, PM_MULTI);
 	plmode_entries[OPT_PM_SHUFFLE].data =
-	  (void *)(long)BTST(config->playmode, PM_SHUFFLE);
+	  (void *)(SINTPTR_T)BTST(config->playmode, PM_SHUFFLE);
 	plmode_entries[OPT_PM_RANDOM].data =
-	  (void *)(long)BTST(config->playmode, PM_RANDOM);
-	other_entries[OPT_CURIOUS].data = (void *)(long)config->curious;
-	other_entries[OPT_TOLERANT].data = (void *)(long)config->tolerant;
-	other_entries[OPT_FULLPATHS].data = (void *)(long)config->fullpaths;
-	other_entries[OPT_WINDOWTITLE].data = (void *)(long)config->window_title;
+	  (void *)(SINTPTR_T)BTST(config->playmode, PM_RANDOM);
+	other_entries[OPT_CURIOUS].data = (void *)(SINTPTR_T)config->curious;
+	other_entries[OPT_TOLERANT].data = (void *)(SINTPTR_T)config->tolerant;
+	other_entries[OPT_FULLPATHS].data = (void *)(SINTPTR_T)config->fullpaths;
+	other_entries[OPT_WINDOWTITLE].data = (void *)(SINTPTR_T)config->window_title;
 #if LIBMIKMOD_VERSION >= 0x030200
-	other_entries[OPT_SAMPLES].data = (void *)(long)config->forcesamples;
-	other_entries[OPT_FAKEVOLBARS].data = (void *)(long)config->fakevolbars;
+	other_entries[OPT_SAMPLES].data = (void *)(SINTPTR_T)config->forcesamples;
+	other_entries[OPT_FAKEVOLBARS].data = (void *)(SINTPTR_T)config->fakevolbars;
 #endif
-	other_entries[OPT_RENICE].data = (void *)(long)config->renice;
-	other_entries[OPT_STATUSBAR].data = (void *)(long)config->statusbar;
+	other_entries[OPT_RENICE].data = (void *)(SINTPTR_T)config->renice;
+	other_entries[OPT_STATUSBAR].data = (void *)(SINTPTR_T)config->statusbar;
 
-	exit_entries[OPT_S_CONFIG].data = (void *)(long)config->save_config;
-	exit_entries[OPT_S_PLAYLIST].data = (void *)(long)config->save_playlist;
+	exit_entries[OPT_S_CONFIG].data = (void *)(SINTPTR_T)config->save_config;
+	exit_entries[OPT_S_PLAYLIST].data = (void *)(SINTPTR_T)config->save_playlist;
 
 	get_driver_options (&output_entries[OPT_DRV_OPTION],
 						&output_entries[OPT_DRIVER]);
@@ -685,43 +685,43 @@ static void config_get_config(CONFIG *config)
 {
 	int i;
 
-	config->driver = (long)output_entries[OPT_DRIVER].data;
+	config->driver = (SINTPTR_T)output_entries[OPT_DRIVER].data;
 #if LIBMIKMOD_VERSION >= 0x030107
 	rc_set_string(&config->driveroptions, output_entries[OPT_DRV_OPTION].data, 99);
 #endif
-	config->stereo = (BOOL)(long)output_entries[OPT_STEREO].data;
-	config->mode_16bit = (BOOL)(long)output_entries[OPT_MODE_16BIT].data;
-	config->frequency = (long)output_entries[OPT_FREQUENCY].data;
-	config->interpolate = (BOOL)(long)output_entries[OPT_INTERPOLATE].data;
-	config->hqmixer = (BOOL)(long)output_entries[OPT_HQMIXER].data;
-	config->surround = (BOOL)(long)output_entries[OPT_SURROUND].data;
-	config->reverb = (long)output_entries[OPT_REVERB].data;
+	config->stereo = (BOOL)(SINTPTR_T)output_entries[OPT_STEREO].data;
+	config->mode_16bit = (BOOL)(SINTPTR_T)output_entries[OPT_MODE_16BIT].data;
+	config->frequency = (SINTPTR_T)output_entries[OPT_FREQUENCY].data;
+	config->interpolate = (BOOL)(SINTPTR_T)output_entries[OPT_INTERPOLATE].data;
+	config->hqmixer = (BOOL)(SINTPTR_T)output_entries[OPT_HQMIXER].data;
+	config->surround = (BOOL)(SINTPTR_T)output_entries[OPT_SURROUND].data;
+	config->reverb = (SINTPTR_T)output_entries[OPT_REVERB].data;
 
-	config->volume = (long)playback_entries[OPT_VOLUME].data;
-	config->volrestrict = (BOOL)(long)playback_entries[OPT_VOLRESTRICT].data;
-	config->fade = (BOOL)(long)playback_entries[OPT_FADE].data;
-	config->loop = (BOOL)(long)playback_entries[OPT_LOOP].data;
-	config->panning = (BOOL)(long)playback_entries[OPT_PANNING].data;
-	config->extspd = (BOOL)(long)playback_entries[OPT_EXTSPD].data;
+	config->volume = (SINTPTR_T)playback_entries[OPT_VOLUME].data;
+	config->volrestrict = (BOOL)(SINTPTR_T)playback_entries[OPT_VOLRESTRICT].data;
+	config->fade = (BOOL)(SINTPTR_T)playback_entries[OPT_FADE].data;
+	config->loop = (BOOL)(SINTPTR_T)playback_entries[OPT_LOOP].data;
+	config->panning = (BOOL)(SINTPTR_T)playback_entries[OPT_PANNING].data;
+	config->extspd = (BOOL)(SINTPTR_T)playback_entries[OPT_EXTSPD].data;
 
 	config->playmode =
-	  (((BOOL)(long)plmode_entries[OPT_PM_MODULE].data) ? PM_MODULE : 0) |
-	  (((BOOL)(long)plmode_entries[OPT_PM_MULTI].data) ? PM_MULTI : 0) |
-	  (((BOOL)(long)plmode_entries[OPT_PM_SHUFFLE].data) ? PM_SHUFFLE : 0) |
-	  (((BOOL)(long)plmode_entries[OPT_PM_RANDOM].data) ? PM_RANDOM : 0);
-	config->curious = (BOOL)(long)other_entries[OPT_CURIOUS].data;
-	config->tolerant = (BOOL)(long)other_entries[OPT_TOLERANT].data;
-	config->fullpaths = (BOOL)(long)other_entries[OPT_FULLPATHS].data;
-	config->window_title = (BOOL)(long)other_entries[OPT_WINDOWTITLE].data;
+	  (((BOOL)(SINTPTR_T)plmode_entries[OPT_PM_MODULE].data) ? PM_MODULE : 0) |
+	  (((BOOL)(SINTPTR_T)plmode_entries[OPT_PM_MULTI].data) ? PM_MULTI : 0) |
+	  (((BOOL)(SINTPTR_T)plmode_entries[OPT_PM_SHUFFLE].data) ? PM_SHUFFLE : 0) |
+	  (((BOOL)(SINTPTR_T)plmode_entries[OPT_PM_RANDOM].data) ? PM_RANDOM : 0);
+	config->curious = (BOOL)(SINTPTR_T)other_entries[OPT_CURIOUS].data;
+	config->tolerant = (BOOL)(SINTPTR_T)other_entries[OPT_TOLERANT].data;
+	config->fullpaths = (BOOL)(SINTPTR_T)other_entries[OPT_FULLPATHS].data;
+	config->window_title = (BOOL)(SINTPTR_T)other_entries[OPT_WINDOWTITLE].data;
 #if LIBMIKMOD_VERSION >= 0x030200
-	config->forcesamples = (BOOL)(long)other_entries[OPT_SAMPLES].data;
-	config->fakevolbars = (BOOL)(long)other_entries[OPT_FAKEVOLBARS].data;
+	config->forcesamples = (BOOL)(SINTPTR_T)other_entries[OPT_SAMPLES].data;
+	config->fakevolbars = (BOOL)(SINTPTR_T)other_entries[OPT_FAKEVOLBARS].data;
 #endif
-	config->renice = (long)other_entries[OPT_RENICE].data;
-	config->statusbar = (long)other_entries[OPT_STATUSBAR].data;
+	config->renice = (SINTPTR_T)other_entries[OPT_RENICE].data;
+	config->statusbar = (SINTPTR_T)other_entries[OPT_STATUSBAR].data;
 
-	config->save_config = (BOOL)(long)exit_entries[OPT_S_CONFIG].data;
-	config->save_playlist = (BOOL)(long)exit_entries[OPT_S_PLAYLIST].data;
+	config->save_config = (BOOL)(SINTPTR_T)exit_entries[OPT_S_CONFIG].data;
+	config->save_playlist = (BOOL)(SINTPTR_T)exit_entries[OPT_S_PLAYLIST].data;
 
 	CF_themes_free_user (&config->themes, &config->cnt_themes);
 	for (i=THEME_COUNT; i<cnt_themes; i++)
