@@ -1,2 +1,2 @@
-EXTRA_DIST = Makefile.lcc config.h \
+EXTRA_DIST = Makefile.lcc Makefile.mingw config.h \
              winvideo.inc
